add gpu_accelerator field to core.Resources
